samples/_failures_safe/1761666405_c03ea5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df5d749c.c: In function ‘main’:
./samples/SAFE/__tmp_df5d749c.c:162:32: error: expected ‘)’ at end of input
  162 |     if (scanf("%d", &startNode)
      |        ~                       ^
      |                                )
./samples/SAFE/__tmp_df5d749c.c:162:5: error: expected declaration or statement at end of input
  162 |     if (scanf("%d", &startNode)
      |     ^~
